# lp-foundations-assignments

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-package.yml
life_expectancy/: __init__.py  cleaning.py  generate_samples.py  load_save.py  main.py  region.py  save.py
life_expectancy/load_strategies/: load_json.py  load_tsv.py  strategy_template.py
life_expectancy/tests/: __init__.py  conftest.py  test_cleaning.py  test_load_save.py  test_region.py
life_expectancy/tests/fixtures/: actual_countries.txt  eu_life_expectancy_raw_sample.tsv  eu_life_expectancy_raw_sample_expected.csv
