[project]
name = "life_expectancy"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
description = "First assignment of the Foundations Learning Path"
authors = [
    {name = "Fernando Cordeiro<fernando@daredata.engineering>"},
    {name = "Gonçalo Chambel<goncalo.chambel@daredata.engineering>"}
]
dependencies = ["pandas"]

[project.optional-dependencies]
dev = ["pytest", "pylint", "pytest-cov", "toml"]

[tool.setuptools]
packages = ["life_expectancy"]

[tool.pylint."messages control"]
disable = [
   "missing-module-docstring",
]

[tool.coverage.run]
omit = [
    "*/conftest.py", "*/test*", # omit test files
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.coverage.report]
fail_under = 80